[project]
name = "hyper-mirror"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.128.0",
    "httpx>=0.28.1",
    "pyyaml>=6.0.3",
    "ruff>=0.15.1",
    "uvicorn>=0.40.0",
]

[project.scripts]
hyper-mirror = "hyper_mirror.app:run"

[build-system]
requires = ["uv_build>=0.9.21,<0.10.0"]
build-backend = "uv_build"
